--- a/working/01_eda.ipynb
+++ b/working/01_eda.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3c19f849",
    "metadata": {},
    "outputs": [],
@@ -89,6 +89,8 @@
     " \n",
     "st=StandardScaler()   \n",
     "df[numerical_cols]=st.fit_transform(df[numerical_cols])\n",
+    "scaler_y = StandardScaler()\n",
+    "df[\"price\"] = scaler_y.fit_transform(df[[\"price\"]])\n",
     "\n",
     "df.to_csv('../data/processed_data.csv',index=False)\n",
     "    "
